--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -97,6 +97,7 @@ $icon-arrow-down: '<svg width="20" height="13" xmlns="http://www.w3.org/2000/svg
 
 // Manager
 .easycredit-tx-manager {
+  box-sizing:border-box;
   background-color: $white;
   border-radius: $border-radius-xl;
   box-shadow: 0 0 25px rgba(0,0,0,.1);
